specify humanities text

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <h4>Mezi predátorskými a místními časopisy je podstatný rozdíl</h4>
                     <p>Je třeba zásadně rozlišovat mezi články v predátorských a místních časopisech. Zatímco u predátorských hovoříme o podezření z pochybných až přímo podvodných praktik, u místních máme na mysli úzkou autorskou základnu. Jedná se o zcela odlišné kategorie s jinou interpretací.</p>
                     <p>Nicméně časopisy v obou kategoriích mají omezený přínos světové literatuře. Špičkoví zahraniční vědci do takových časopisů pravidelně nepřispívají a ani je nečtou. Skutečně vynikající výsledek by v takovém časopise s nejvyšší pravěpodobností zapadl.</p>
-                    <p>Při uvažování o místních časopisech je třeba zdůraznit rozdíly mezi obory. Do časopisu zaměřeného na bohemistiku budou přirozeně přispívat převážně místní autoři. Podobné obory, které se zabývají navýsost místními tématy, se vyskytují zejména v humanitních vědách. Naopak v ostatních oborech, včetně většiny společenských věd, je potřeba nové relevantní poznatky diskutovat ve světové vědecké komunitě.</p>
+                    <p>Při uvažování o místních časopisech je třeba zdůraznit rozdíly mezi obory. Do časopisu zaměřeného na bohemistiku budou přirozeně přispívat převážně místní autoři. Další podobné obory, které se zabývají studiem výsostně místních dějin, jazyka, literatury, umění a kultury, se vyskytují zejména v humanitních vědách. Naopak v ostatních oborech, včetně většiny společenských věd, je potřeba nové relevantní poznatky diskutovat ve světové vědecké komunitě.</p>
                 </div>
                 </div>
             <div id="empt-LocalsAreNotPred"class="fixempty fullscreen"></div>
