--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <h4>Mezi predátorskými a místními časopisy je podstatný rozdíl</h4>
                     <p>Je třeba zásadně rozlišovat mezi články v predátorských a místních časopisech. Zatímco u predátorských hovoříme o podezření z pochybných až přímo podvodných praktik, u místních máme na mysli úzkou autorskou základnu. Jedná se o zcela odlišné kategorie s jinou interpretací.</p>
                     <p>Nicméně časopisy v obou kategoriích mají omezený přínos světové literatuře. Špičkoví zahraniční vědci do takových časopisů pravidelně nepřispívají a ani je nečtou. Skutečně vynikající výsledek by v takovém časopise s nejvyšší pravěpodobností zapadl.</p>
-                    <p>Při uvažování o místních časopisech je třeba zdůraznit rozdíly mezi obory. Do časopisu zaměřeného na bohemistiku budou přirozeně přispívat převážně místní autoři. Další podobné obory, které se zabývají studiem výsostně místních dějin, jazyka, literatury, umění a kultury, se vyskytují zejména v humanitních vědách. Naopak v ostatních oborech, včetně většiny společenských věd, je potřeba nové relevantní poznatky diskutovat ve světové vědecké komunitě.</p>
+                    <p>Při uvažování o místních časopisech je třeba zdůraznit rozdíly mezi obory. Do časopisu zaměřeného na bohemistiku budou přirozeně přispívat převážně místní autoři. Další podobné obory, které se zabývají studiem místních dějin, jazyka, literatury, umění a kultury, se vyskytují zejména v humanitních vědách. Naopak v ostatních oborech, včetně většiny společenských věd, je potřeba nové relevantní poznatky diskutovat ve světové vědecké komunitě.</p>
                 </div>
                 </div>
             <div id="empt-LocalsAreNotPred"class="fixempty fullscreen"></div>
@@ -151,7 +151,6 @@
                             <h4>Zásadní rozdíl</h4>
                             <p>Zvláště ve&nbsp;<span style="color:#99d594">společenských vědách</span> najdeme řadu pracovišť s&nbsp;vysokým podílem jak predátorských tak i&nbsp;místních publikací. Není v&nbsp;tomto oboru výjimkou, aby souhrnně do těchto dvou kategorií spadalo více jak 60 % či dokonce 80 % všech článků pracoviště.</p>
                             <p>Rozdíl oproti <span style="color:#d53e4f">přírodním vědám</span> je v&nbsp;obou kategoriích markantní. Přírodovědecká pracoviště jsou v&nbsp;drtivé většině soustředěna v&nbsp;levém dolním rohu. Jen několik jich vystoupalo na výrazně vyšší vrstevnice. </p>
-                            <p>Nelze se&nbsp;divit, že přírodovědci problémy ve&nbsp;společenských vědách občas podceňují.</p>
                         </div>
                     </div>
                 </div>
@@ -248,7 +247,7 @@
                     <p class="footnote">Doporučená citace: Macháček, V. a&nbsp;Srholec, M.(2018) Kdo nejvíce publikuje v&nbsp;predátorských a&nbsp;místních časopisech? Studie 4/2018. Think-tank IDEA při NHÚ AV ČR.</p>
                     <p class="footnote">Upozornění: Veškeré případné nepřesnosti a&nbsp;chyby jdou na vrub autorů, stejně jako názory a&nbsp;tvrzení ve&nbsp;studii uvedené. Studie vznikla s&nbsp;podporou Akademie věd ČR v&nbsp;rámci Strategie AV 21. Za cenné připomínky k pracovní verzi studie děkujeme kolegům z&nbsp;CERGE-EI.</p>
                     <br />
-                    <p class="tip">Tip: Máte-li zkušenost s&nbsp;konkrétnimi časopisy, pracovišti či publikacemi, nechte nám vzkaz u&nbsp;následujícího facebookového postu.</p>
+                    <p class="tip">Tip: Máte-li zkušenost s&nbsp;konkrétnimi pracovišti, časopisy či publikacemi, nechte nám vzkaz u&nbsp;následujícího facebookového postu.</p>
                     <div class="fb-post" data-href="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3" data-width="500" data-show-text="true"><blockquote cite="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3" class="fb-xfbml-parse-ignore"><p>TESTY - TRESTY ?
 
                             Mají se&nbsp;studenti testovat? Dávají nám výsledky testů informaci o&nbsp;skutečných znalostech studentů? Čtěte komentář Filipa Pertolda v&nbsp;dnešních Lidových novinách http://bit.ly/2sgrvud</p>Posted by <a href="https://www.facebook.com/ideacerge/">IDEA - Institut pro demokracii a&nbsp;ekonomickou analýzu</a> on&nbsp;<a href="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3">Tuesday, May 29, 2018</a></blockquote></div>                </div>
@@ -413,7 +412,7 @@
                     <div class="modalBody" style="padding:0vw 20vw;">
                        <h3>O autorech</h3>
                         <div class="medailon">
-                           <h4>Vítek Macháček</h4>
+                           <h4>Vít Macháček</h4>
                             <center><img src="img/vitek_final.JPG" class="imgMy right" /></center>
                             <p>Pro think-tank IDEA začal pracovat v&nbsp;roce 2015. Magisterský titul získal v&nbsp;roce 2016 na Institutu ekonomických studií Univerzity Karlovy, kde je současně též doktorandem. Do roku 2018 také působil v&nbsp;České spořitelně v&nbsp;rámci EU office a&nbsp;později jako makroekonomický analytik. Zabývá se&nbsp;ekonomií inovací, scientometrií i&nbsp;evropskou integrací.</p>
                             <p>E-mail: <a href="mailto:vit.machacek@cerge-ei.cz" >vit.machacek@cerge-ei.cz</a></p>
