--- a/index.html
+++ b/index.html
@@ -248,9 +248,11 @@
                     <p class="footnote">Upozornění: Veškeré případné nepřesnosti a&nbsp;chyby jdou na vrub autorů, stejně jako názory a&nbsp;tvrzení ve&nbsp;studii uvedené. Studie vznikla s&nbsp;podporou Akademie věd ČR v&nbsp;rámci Strategie AV 21. Za cenné připomínky k pracovní verzi studie děkujeme kolegům z&nbsp;CERGE-EI.</p>
                     <br />
                     <p class="tip">Tip: Máte-li zkušenost s&nbsp;konkrétnimi pracovišti, časopisy či publikacemi, nechte nám vzkaz u&nbsp;následujícího facebookového postu.</p>
-                    <div class="fb-post" data-href="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3" data-width="500" data-show-text="true"><blockquote cite="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3" class="fb-xfbml-parse-ignore"><p>TESTY - TRESTY ?
-
-                            Mají se&nbsp;studenti testovat? Dávají nám výsledky testů informaci o&nbsp;skutečných znalostech studentů? Čtěte komentář Filipa Pertolda v&nbsp;dnešních Lidových novinách http://bit.ly/2sgrvud</p>Posted by <a href="https://www.facebook.com/ideacerge/">IDEA - Institut pro demokracii a&nbsp;ekonomickou analýzu</a> on&nbsp;<a href="https://www.facebook.com/ideacerge/photos/a.495296640662185.1073741828.476377929220723/871778203014025/?type=3">Tuesday, May 29, 2018</a></blockquote></div>                </div>
+                    <!-- <div class="fb-post" data-href="https://www.facebook.com/ideacerge/posts/875237399334772" data-width="500" data-show-text="true"> -->
+                        <div class="fb-post" data-href="https://www.facebook.com/vitmach/posts/10215520365423697" data-width="500" data-show-text="true">
+                        A JAK SE PUBLIKUJE U VÁS?
+                        Nová studie IDEA Víta Macháčka a Martina Srholce se vrací k publikování v predátorských a místních časopisech. Studie odhaluje velmi rozmanitou praxi českých výzkumných pracovišť.
+                    </div>
             </div>
 
             
